--- a/Cartoon Arts.html
+++ b/Cartoon Arts.html
@@ -10,7 +10,7 @@
     <div class="sidebar">
         <div class="shortcut_links">
             <a href="index.html"><img src="Images (Lassan)/Home Icon.png" class="home_icon"><p class="home_text"><b>Home</b></p></a>
-            <a href="Fan Art.html"><img src="Images (Lassan)/Vectors' Logo.png" class="fan_art"><p class="fan_art_text"><b>Vectors</b></p></a>
+            <a href="Fan Art"><img src="Images (Lassan)/Vectors' Logo.png" class="fan_art"><p class="fan_art_text"><b>Vectors</b></p></a>
             <a href="Cartoon Arts.html"><img src="Images (Lassan)/Cartoon Logo.png" class="cartoon_art"><p class="cartoon_text"><b>Cartoons</b></p></a>
             <a href="Videos.html"><img src="Images (Lassan)/Video Camera.png" class="edits"><p class="edits_text"><b>Videos</b></p></a>
             <a href="Series.html"><img src="Images (Lassan)/Nisflix 1.png" class="series"> <p class="series_text"><b>Series</b></p></a>
