--- a/series.html
+++ b/series.html
@@ -22,13 +22,13 @@
 <body bgcolor="#45B5FF">
     <div class="sidebar">
         <div class="shortcut_links">
-            <a href="Series.html"><img src="Images (Lassan)/Nisflix 3.png" class="Nisflix"></a>
-            <a href="index.html"><p class="home_text"><b>Home</b></p></a>
-            <a href="Fan Art.html"><p class="fan_art_text"><b>Fan Art</b></p></a>
-            <a href="Cartoon Arts.html"><p class="cartoon_text"><b>Cartoons</b></p></a>
-            <a href="Videos.html"><p class="edits_text"><b>Videos</b></p></a>
-            <a href="Series.html"><p class="series_text"><b>Series</b></p></a>
-            <a href="Links.html"><p class="links_text"><b>Links</b></p></a>
+            <a href="series"><img src="Images (Lassan)/Nisflix 3.png" class="Nisflix"></a>
+            <a href="www.happy-lassan-diwas.site"><p class="home_text"><b>Home</b></p></a>
+            <a href="fan-arts"><p class="fan_art_text"><b>Fan Art</b></p></a>
+            <a href="cartoon-arts"><p class="cartoon_text"><b>Cartoons</b></p></a>
+            <a href="videos"><p class="edits_text"><b>Videos</b></p></a>
+            <a href="series"><p class="series_text"><b>Series</b></p></a>
+            <a href="links"><p class="links_text"><b>Links</b></p></a>
         </div>
     </div>
     <video loop id="video-background">
