--- a/series.html
+++ b/series.html
@@ -24,7 +24,7 @@
         <div class="shortcut_links">
             <a href="series"><img src="Images (Lassan)/Nisflix 3.png" class="Nisflix"></a>
             <a href="index"><p class="home_text"><b>Home</b></p></a>
-            <a href="fan-arts"><p class="fan_art_text"><b>Fan Art</b></p></a>
+            <a href="vector-arts"><p class="fan_art_text"><b>Fan Art</b></p></a>
             <a href="cartoon-arts"><p class="cartoon_text"><b>Cartoons</b></p></a>
             <a href="videos"><p class="edits_text"><b>Videos</b></p></a>
             <a href="series"><p class="series_text"><b>Series</b></p></a>
