--- a/vector-arts.html
+++ b/vector-arts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Fan Arts </title>
+    <title> Vector Arts </title>
     <link rel="stylesheet" href="Fan Art.css">
 </head>
 <body bgcolor="#FB8BE5">
