--- a/vector-arts.html
+++ b/vector-arts.html
@@ -23,7 +23,7 @@
         <div class="container2">
             <div class="header">
                 <p class="fanart_heading">
-                    <b>Fan Arts For You By Your Lassans</b>
+                    <b>Vectors For You By Your Lassans</b>
                     <img src="Images (Lassan)/Heart Hands.png" class="heart_hands">
                 </p>
             </div>
