--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </div> 
     <div class="website_author">
-        <p class="username"><b> By @aadya_loves_nonu_bhaiya </b></p>
+        <a href = "https://discord.com/invite/wkZq9AV9" class = "username">Contact developer for more information!</a>
     </div>
 </body>
 </html>
