--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </div> 
     <div class="website_author">
-        <a href = "https://discord.com/invite/wkZq9AV9" class = "username">Contact developer for more information!</a>
+        <a href = "https://discord.com/invite/wkZq9AV9" class = "username"><b>Contact developer for more information!</b></a>
     </div>
 </body>
 </html>
