--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <div class="container">
         <div class="coming_soon">
             <p class="text"><b>Our very own website for<br> Lassan Diwas -<br> Coming Soon</b></p>
+            <div class="website_author_pc">
+                <a href = "https://discord.com/invite/JKCBYjez" class = "username"><b>Contact developer for more information!</b></a>
+            </div>
         </div>
+    </div>
         <div class="images">
             <img src="images/Nischay Bhaiya.jpg" class="nischay_bhaiya">
             <img src="images/Nischay Bhaiya 2.jpg" class="nischay_bhaiya2">
