--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div class="container">
         <div class="coming_soon">
-            <p class="text"><b>Our very own website for<br> Lassan Diwas -<br> Coming Soon</b></p>
+            <p class="text"><b>Our very own website for<br> Lassan Diwas -<br> Launching tomorrow!</b></p>
             <div class="website_author_pc">
                 <a href = "https://discord.com/invite/JKCBYjez" class = "username"><b>Contact developer for more information!</b></a>
             </div>
