--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </div> 
     <div class="website_author">
-        <a href = "" class = "username"><b>Contact developer for more information!</b></a>
+        <a href = "" class = "username"><b>By @aadya_loves_nonu_bhaiya</b></a>
     </div>
 </body>
 </html>
