--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="coming_soon">
             <p class="text"><b>Our very own website for<br> Lassan Diwas -<br> Launching Today!</b></p>
             <div class="website_author_pc">
-                <a href = "https://discord.com/invite/JKCBYjez" class = "username"><b>Contact developer for more information!</b></a>
+                <p class = "username"><b>Contact developer for more information!</b></p>
             </div>
         </div>
     </div>
