--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
     <div class="container">
         <div class="coming_soon">
             <p class="text"><b>Our very own website for<br> Lassan Diwas -<br> Launching Today!</b></p>
-            <div class="website_author_pc">
-                <p class = "username"><b>Contact developer for more information!</b></p>
-            </div>
         </div>
     </div>
         <div class="images">
@@ -25,7 +22,7 @@
         </div>
     </div> 
     <div class="website_author">
-        <a href = "" class = "username"><b>By @aadya_loves_nonu_bhaiya</b></a>
+        <p = "username"><b>By @aadya_loves_nonu_bhaiya</b></p>
     </div>
 </body>
 </html>
