--- a/series.html
+++ b/series.html
@@ -22,19 +22,38 @@
 <body bgcolor="#45B5FF">
     <div class="sidebar">
         <div class="shortcut_links">
-            <a href="series"><img src="Images (Lassan)/Nisflix 3.png" class="Nisflix"></a>
-            <a href="index"><p class="home_text"><b>Home</b></p></a>
-            <a href="vector-arts"><p class="fan_art_text"><b>Fan Art</b></p></a>
-            <a href="cartoon-arts"><p class="cartoon_text"><b>Cartoons</b></p></a>
-            <a href="videos"><p class="edits_text"><b>Videos</b></p></a>
-            <a href="series"><p class="series_text"><b>Series</b></p></a>
-            <a href="links"><p class="links_text"><b>Links</b></p></a>
+            <a href="Series.html"><img src="Images (Lassan)/Nisflix 3.png" class="Nisflix"></a>
+            <a href="index.html"><p class="home_text"><b>Home</b></p></a>
+            <a href="Fan Art.html"><p class="fan_art_text"><b>Fan Art</b></p></a>
+            <a href="Cartoon Arts.html"><p class="cartoon_text"><b>Cartoons</b></p></a>
+            <a href="Videos.html"><p class="edits_text"><b>Videos</b></p></a>
+            <a href="Series.html"><p class="series_text"><b>Series</b></p></a>
+            <a href="Links.html"><p class="links_text"><b>Links</b></p></a>
         </div>
     </div>
-    <video loop id="video-background">
+    <div class="container">
+        <video loop id="video-background">
         <source src="Series/Trailer.mp4" type="video/mp4">
     </video>
     <button class="watch_button" onclick="playPause(this, 'video-background')"> ▶ Watch Trailer </button>
-    <div class="upcoming"><p class="upcoming_episodes"><b>Upcoming Episodes</b></p></div>
+    <div class="series_description">
+        <div class="description"><p class="series_description_heading"><b>Series Description</b></p></div></div>
+        <button class="description_content">
+            <p class="description_content_text">This series is about the love and  the craziness we did for like 10 years!! More than 20 fan pages collaborated 
+                and made this series for the light of our lives “Nischay” YOU MEAN A LOT TO US!! OUR PRECIOUS GEM!! This series 
+                has your journey, our little contribution and a lot of pyaaaarrr!!! It took a month to make it all!! 💎 Hope you
+                like our efforts, we love youu!! <br> ~ Lassan Gang
+            </p>
+        </button>
+    </div>
+    <button class="upcoming"><p class="upcoming_episodes"><b>Series episodes not out yet, will be out soon, thank you bhaiya, we love you!
+        <br> Love from Niyati, Saniya, Palak & others!
+    </b></p>
+    </button>
+    <div class="mobile">
+        <div class="mobile_header"><p class="mobile_heading"><b>Happy Lassan Diwas</b></p></div>
+        <button class="mobile_info"><p class="mobile_info_text">Happy Lassan Diwas everyone, this year we have created a special website for Lassan Diwas! The website has been launched, to view the content please use a laptop or watch Nischay bhaiya's livestream on YouTube!</p></button>
+        <img src="Images (Lassan)/Alternate image.png" class="alternate_img">
+    </div>
 </body>
 </html>
