--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Happy Lassan Diwas </title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="page">
     <div class="header">
@@ -16,12 +16,12 @@
     <!-- ---------------- sidebar---------- -->
     <div class="sidebar">
         <div class="shortcut_links">
-            <a href="index"><img src="Images (Lassan)/Home Icon.png" class="home_icon"><p class="home_text"><b>Home</b></p></a>                
-            <a href="vector-arts"><img src="Images (Lassan)/Vectors' Logo.png" class="fan_art"><p class="fan_art_text"><b>Vectors</b></p></a>
-            <a href="cartoon-arts"><img src="Images (Lassan)/Cartoon Logo.png" class="cartoon_art"><p class="cartoon_text"><b>Cartoons</b></p></a>
-            <a href="videos"><img src="Images (Lassan)/Video Camera.png" class="edits"><p class="edits_text"><b>Videos</b></p></a>
-            <a href="series"><img src="Images (Lassan)/Nisflix 1.png" class="series"> <p class="series_text"><b>Series</b></p></a>
-            <a href="links"><img src="Images (Lassan)/Namaste.png" class="links"><p class="links_text"><b>Links</b></p></a>
+            <a href="index.html"><img src="Images (Lassan)/Home Icon.png" class="home_icon"><p class="home_text"><b>Home</b></p></a>
+            <a href="Fan Art.html"><img src="Images (Lassan)/Vectors' Logo.png" class="fan_art"><p class="fan_art_text"><b>Fan Art</b></p></a>
+            <a href="Cartoon Arts.html"><img src="Images (Lassan)/Cartoon Logo.png" class="cartoon_art"><p class="cartoon_text"><b>Cartoons</b></p></a>
+            <a href="Videos.html"><img src="Images (Lassan)/Video Camera.png" class="edits"><p class="edits_text"><b>Videos</b></p></a>
+            <a href="Series.html"><img src="Images (Lassan)/Nisflix 1.png" class="series"> <p class="series_text"><b>Series</b></p></a>
+            <a href="Links.html"><img src="Images (Lassan)/Namaste.png" class="links"><p class="links_text"><b>Links</b></p></a>
         </div>
     </div>
     <div class="container">
@@ -56,6 +56,11 @@
                     </div>
                 </button>
             </button>
+        </div>
+        <div class="mobile">
+            <div class="mobile_header"><p class="mobile_heading"><b>Happy Lassan Diwas</b></p></div>
+            <button class="mobile_info"><p class="mobile_info_text">Happy Lassan Diwas everyone, this year we have created a special website for Lassan Diwas! The website has been launched, to view the content please use a laptop or watch Nischay bhaiya's livestream on YouTube!</p></button>
+            <img src="Images (Lassan)/Alternate image.png" class="alternate_img">
         </div>
     </div>
     <script src="script.js"></script>
