--- a/cartoon-arts.html
+++ b/cartoon-arts.html
@@ -9,12 +9,12 @@
 <body bgcolor="#FB8BE5">
     <div class="sidebar">
         <div class="shortcut_links">
-            <a href="index"><img src="Images (Lassan)/Home Icon.png" class="home_icon"><p class="home_text"><b>Home</b></p></a>
-            <a href="vector-arts"><img src="Images (Lassan)/Vectors' Logo.png" class="fan_art"><p class="fan_art_text"><b>Vectors</b></p></a>
-            <a href="cartoon-arts"><img src="Images (Lassan)/Cartoon Logo.png" class="cartoon_art"><p class="cartoon_text"><b>Cartoons</b></p></a>
-            <a href="videos"><img src="Images (Lassan)/Video Camera.png" class="edits"><p class="edits_text"><b>Videos</b></p></a>
-            <a href="series"><img src="Images (Lassan)/Nisflix 1.png" class="series"> <p class="series_text"><b>Series</b></p></a>
-            <a href="links"><img src="Images (Lassan)/Namaste.png" class="links"><p class="links_text"><b>Links</b></p></a>
+            <a href="index.html"><img src="Images (Lassan)/Home Icon.png" class="home_icon"><p class="home_text"><b>Home</b></p></a>
+            <a href="Fan Art.html"><img src="Images (Lassan)/Vectors' Logo.png" class="fan_art"><p class="fan_art_text"><b>Vectors</b></p></a>
+            <a href="Cartoon Arts.html"><img src="Images (Lassan)/Cartoon Logo.png" class="cartoon_art"><p class="cartoon_text"><b>Cartoons</b></p></a>
+            <a href="Videos.html"><img src="Images (Lassan)/Video Camera.png" class="edits"><p class="edits_text"><b>Videos</b></p></a>
+            <a href="Series.html"><img src="Images (Lassan)/Nisflix 1.png" class="series"> <p class="series_text"><b>Series</b></p></a>
+            <a href="Links.html"><img src="Images (Lassan)/Namaste.png" class="links"><p class="links_text"><b>Links</b></p></a>
         </div>
     </div>
     <div class="header">
@@ -61,6 +61,11 @@
                     <p class="p_triggered_anushkaa">~ By Anushka</p>
                 </div>
             </div>
+        </div>
+        <div class="mobile">
+            <div class="mobile_header"><p class="mobile_heading"><b>Happy Lassan Diwas</b></p></div>
+            <button class="mobile_info"><p class="mobile_info_text">Happy Lassan Diwas everyone, this year we have created a special website for Lassan Diwas! The website has been launched, to view the content please use a laptop or watch Nischay bhaiya's livestream on YouTube!</p></button>
+            <img src="Images (Lassan)/Alternate image.png" class="alternate_img">
         </div>
     </div>
 </body>
