--- a/links.html
+++ b/links.html
@@ -25,10 +25,19 @@
                 shouting them out, thank you!
             </p>
         </button>
-        <button class="harmony">
-            <a href="https://www.discord.gg/NZffnGqHW9" target="_blank">
-                <img src="Images (Lassan)/Discord Logo.png" class="harmony_logo">
-                <p class="harmony_link">Our Discord Server!</p>
+        <button class="series_editors">
+            <p class="series_editors_credits"><b><u>Series Editors</u></b></p>
+            <a href="https://www.instagram.com/soulfulxeditz/" style="text-decoration: none;" target="_blank">
+                <img src="Images (Lassan)/Insta Icon.png" class="insta_icon25">
+             <p class="soulfulxeditz"><b>/soulfulxeditz</b></p>
+            </a>
+            <a href="https://www.instagram.com/nischayxgracious/" style="text-decoration: none;" target="_blank">
+                <img src="Images (Lassan)/Insta Icon.png" class="insta_icon26">
+                <p class="nischayxgracious"><b>/nischayxgracious</b></p>
+            </a>
+            <a href="https://www.instagram.com/nischay.krishna_/" style="text-decoration: none;" target="_blank">
+                <img src="Images (Lassan)/Insta Icon.png" class="insta_icon27">
+                <p class="nischay_krishna"><b>/nischay.krishna_</b></p>
             </a>
         </button>
         <button class="web_development">
