--- a/links.html
+++ b/links.html
@@ -21,8 +21,7 @@
     <div class="credits_section">
         <button class="thank_you">
             <p class="request">That's all for the website, we wanted to make you happy this Lassan Diwas and hope that <br> we did it right! It would mean a
-                lot to us if you connect with us on discord & acknowledge <br> every person who contributed to this website by
-                shouting them out, thank you!
+                lot to us acknowledge <br> every person who contributed to this website by shouting them out and spend some time talking to us on discord, thank you!
             </p>
         </button>
         <button class="series_editors">
