--- a/links.html
+++ b/links.html
@@ -20,8 +20,8 @@
     </div>
     <div class="credits_section">
         <button class="thank_you">
-            That's all for the website, we wanted to make you happy this Lassan Diwas & hope that we did it right! It would mean a lot to us if you acknowledge
-            every person who contributed to this website by shouting them out and spend some time talking to us on discord, thank you!
+            <p class = "request"> That's all for the website, we wanted to make you happy this Lassan Diwas & hope that we did it right! It would mean a lot to us if you acknowledge
+            every person who contributed to this website by shouting them out and spend some time talking to us on discord, thank you! </p>
         </button>
         <button class="series_editors">
             <p class="series_editors_credits"><b><u>Series Editors</u></b></p>
