--- a/vector-arts.html
+++ b/vector-arts.html
@@ -3,61 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Videos </title>
-    <div class="header"> <p class="heading"><b>Videos</b></p> <img src="Images (Lassan)/Heart Hands.png" class="heart_hands"></div>
-    <link rel="stylesheet" href="Videos.css">
+    <title> Fan Arts </title>
+    <link rel="stylesheet" href="Fan Art.css">
 </head>
-<body bgcolor="#45B5FF">
-    <div class="sidebar">
-        <div class="shortcut_links">
-            <a href="index"><img src="Images (Lassan)/Home Icon.png" class="home_icon"><p class="home_text"><b>Home</b></p></a>
-            <a href="vector-arts"><img src="Images (Lassan)/Vectors' Logo.png" class="fan_art"><p class="fan_art_text"><b>Fan Art</b></p></a>
-            <a href="cartoon-arts"><img src="Images (Lassan)/Cartoon Logo.png" class="cartoon_art"><p class="cartoon_text"><b>Cartoons</b></p></a>
-            <a href="videos"><img src="Images (Lassan)/Video Camera.png" class="edits"><p class="edits_text"><b>Videos</b></p></a>
-            <a href="series"><img src="Images (Lassan)/Nisflix 1.png" class="series"> <p class="series_text"><b>Series</b></p></a>
-            <a href="links"><img src="Images (Lassan)/Namaste.png" class="links"><p class="links_text"><b>Links</b></p></a>
+<body bgcolor="#FB8BE5">
+    <div class="container1">
+        <div class="sidebar">
+            <div class="shortcut_links">
+                <a href="index"><img src="Images (Lassan)/Home Icon.png" class="home_icon"><p class="home_text"><b>Home</b></p></a>
+                <a href="vector-arts"><img src="Images (Lassan)/Vectors' Logo.png" class="fan_art"><p class="fan_art_text"><b>Fan Art</b></p></a>
+                <a href="cartoon-arts"><img src="Images (Lassan)/Cartoon Logo.png" class="cartoon_art"><p class="cartoon_text"><b>Cartoons</b></p></a>
+                <a href="videos"><img src="Images (Lassan)/Video Camera.png" class="edits"><p class="edits_text"><b>Videos</b></p></a>
+                <a href="series"><img src="Images (Lassan)/Nisflix 1.png" class="series"> <p class="series_text"><b>Series</b></p></a>
+                <a href="links"><img src="Images (Lassan)/Namaste.png" class="links"><p class="links_text"><b>Links</b></p></a>
+            </div>
         </div>
     </div>
+    <div class="main_container">
+        <div class="container2">
+            <div class="header">
+                <p class="fanart_heading">
+                    <b>Fan Arts For You By Your Lassans</b>
+                    <img src="Images (Lassan)/Heart Hands.png" class="heart_hands">
+                </p>
+            </div>
 
-    <div class="main_subheading">
-        <p class="main_subheading_text">Please play only 1 video at a time (or maybe not XD)</p>
-    </div>
-    <div class="memes_heading">
-        <p class="memes_heading_text">Memes & Edits</p>
-    </div>
-    <div class="videos_container">
-        <video src="Video Edits/By Aadya.mp4" class="video1" controls></video>
-        <video src="Video Edits/By Nishtha.mp4" class="video2" controls></video>
-    </div>
-    <div class="videos_container2">
-        <video src="Video Edits/By Shreya Hastir.mp4" class="video1" controls></video>
-        <video src="Video Edits/Meme By Shreya Hastir.mp4" class="video2" controls></video>
-    </div>
-    <div class="videos_container3">
-        <video src="Video Edits/By Saniya.mp4" class="video1" controls></video>
-        <video src="Video Edits/By Mubu Didi.mp4" class="video2" controls></video>
-    </div>
-    <div class="videos_container4">
-        <video src="Video Edits/By Evana & Aastha.mp4" class="video1" controls></video>
-        <video src="Video Edits/By Kritika.mp4" class="video2" controls></video>
-    </div>
-    <div class="videos_container5">
-        <video src="Video Edits/By Harshita.mp4" class="video1" controls></video>
-        <video src="Video Edits/2 By Aadya.mp4" class="video2" controls></video>
-    </div>
-    <div class="videos_container6">
-        <video src="Video Edits/By Shravya.mp4" class="video1" controls></video>
-        <video src="Video Edits/By Haggu.mp4" class="video2" controls></video>
-    </div>
-    <div class="videos_container7">
-        <video src="Video Edits/2 By Mubu Didi.mp4" class="video1" controls></video>
-        <video src="Video Edits/By Smriti.mp4" class="video2" controls></video>
-    </div>
-
-    <div class="mobile">
-        <div class="mobile_header"><p class="mobile_heading"><b>Happy Lassan Diwas</b></p></div>
-        <button class="mobile_info"><p class="mobile_info_text">Happy Lassan Diwas everyone, this year we have created a special website for Lassan Diwas! The website has been launched, to view the content please use a laptop or watch Nischay bhaiya's livestream on YouTube!</p></button>
-        <img src="Images (Lassan)/Alternate image.png" class="alternate_img">
-    </div>
+            <div class="main_fanart_container">
+                <div class="fanart_container">
+                    <img src="Fan Art/By Manogna Didi.jpg" class="IMG_ByManognaDidi">
+                    <img src="Fan Art/By Lavisha.jpg" class="IMG_ByLavisha">
+                    <img src="Fan Art/By Shivangi.jpg" class="IMG_ByShivangi">
+                    <img src="Fan Art/By Kashvee.png" class="IMG_ByKashvee">
+                </div>
+                <div class="art_credits">
+                    <div class="for_nischaymalhan">
+                        <p class="p_for_nischaymalhan">~ By Manogna</p>
+                    </div>
+                    <div class="triggered_lavisha">
+                        <p class="p_triggered_lavisha">~ By Lavisha</p>
+                    </div>
+                    <div class="triggered__shivangi">
+                        <p class="p_triggered__shivangi">~ By Shivangi</p>
+                    </div>
+                    <div class="triggered_kashvee">
+                        <p class="p_triggered_kashvee">~ By Kashvee</p>
+                    </div>
+                </div>
+                <div class="fanart_container2">
+                    <img src="Fan Art/By Srushti.png" class="IMG_BySrushti">
+                    <img src="Fan Art/By Aadya.png" class="IMG_ByAadya">
+                    <img src="Fan Art/By Vartika.png" class="IMG_ByVartika">
+                    <img src="Fan Art/By Samaira.png" class="IMG_BySamaira">
+        
+                    <div class="art_credits2">
+                        <div class="preschay_love">
+                            <p class="p_preschay_love">~ By Srushti</p>
+                        </div>
+                        <div class="aadya_loves_nonu_bhaiya">
+                            <p class="p_aadya_loves_nonu_bhaiya">~ By Aadya</p>
+                        </div>
+                        <div class="nexus_abhischay">
+                            <p class="p_nexus_abhischay">~ By Vartika</p>
+                        </div>
+                        <div class="triggered_samaira07">
+                            <p class="p_triggered_samaira07">~ By Samaira</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mobile">
+            <div class="mobile_header"><p class="mobile_heading"><b>Happy Lassan Diwas</b></p></div>
+            <button class="mobile_info"><p class="mobile_info_text">Happy Lassan Diwas everyone, this year we have created a special website for Lassan Diwas! The website has been launched, to view the content please use a laptop or watch Nischay bhaiya's livestream on YouTube!</p></button>
+            <img src="Images (Lassan)/Alternate image.png" class="alternate_img">
+        </div>
+    </div>   
 </body>
 </html>
