--- a/series.html
+++ b/series.html
@@ -46,9 +46,8 @@
             </p>
         </button>
     </div>
-    <button class="upcoming"><p class="upcoming_episodes"><b>Series episodes not out yet, will be out soon, thank you bhaiya, we love you!
-        <br> Love from Niyati, Saniya, Palak & others!
-    </b></p>
+    <button class="upcoming"><p class="upcoming_episodes"><b>Series episodes 1 &amp; 2 are out on insta, @nischayxgracious, @soulfulxeditz, @nischay.krishna_! Thank you bhaiya, <br> we love you!
+        <br></b></p>
     </button>
     <div class="mobile">
         <div class="mobile_header"><p class="mobile_heading"><b>Happy Lassan Diwas</b></p></div>
