--- a/links.html
+++ b/links.html
@@ -21,7 +21,11 @@
     <div class="credits_section">
         <button class="thank_you">
             <p class = "request"> That's all for the website, we wanted to make you happy this Lassan Diwas & hope that we did it right! It would mean a lot to us if you acknowledge
-            every person who contributed to this website by shouting them out and spend some time talking to us on discord, thank you! </p>
+                every person who contributed to this website by shouting them out and spend some time talking to us on discord, thank you!
+            </p>
+        </button>
+        <button class="harmony_server">
+            <a href="https://discord.com/invite/NZffnGqHW9" target="_blank"><img src="Images (Lassan)/Discord Logo.png" class="harmony_logo"></a>
         </button>
         <button class="series_editors">
             <p class="series_editors_credits"><b><u>Series Editors</u></b></p>
@@ -38,125 +42,127 @@
                 <p class="nischay_krishna"><b>/nischay.krishna_</b></p>
             </a>
         </button>
-        <button class="web_development">
-            <a href="https://www.instagram.com/aadya_loves_nonu_bhaiya/" style="text-decoration: none;" target="_blank">
-                <p class="dev_head"><b><u>Website Development</u></b></p>
-                <img src="Images (Lassan)/My PFP.jpg" class="my_pfp">
-                <img src="Images (Lassan)/Insta Icon.png" class="insta_icon">
-                <p class="aadya_loves_nonu_bhaiya"><b>/aadya_loves_nonu_bhaiya</b></p>
-            </a>
-        </button>
-        <button class="vectors">
-            <p class="vector_credits"><b><u>Vector Art Credits</u></b></p>
-            <div class="vector_credits_list">
-                <a href="https://www.instagram.com/for_nischaymalhan/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon2">
-                    <p class="for_nischaymalhan"><b>/for_nischaymalhan</b></p>
+        <div class="main_credits">
+            <button class="web_development">
+                <a href="https://www.instagram.com/aadya_loves_nonu_bhaiya/" style="text-decoration: none;" target="_blank">
+                    <p class="dev_head"><b><u>Website Development</u></b></p>
+                    <img src="Images (Lassan)/My PFP.jpg" class="my_pfp">
+                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon">
+                    <p class="aadya_loves_nonu_bhaiya"><b>/aadya_loves_nonu_bhaiya</b></p>
                 </a>
-                <a href="https://www.instagram.com/triggered.lavisha/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon3">
-                    <p class="triggered_lavisha"><b>/triggered.lavisha</b></p>
+            </button>
+            <button class="vectors">
+                <p class="vector_credits"><b><u>Vector Art Credits</u></b></p>
+                <div class="vector_credits_list">
+                    <a href="https://www.instagram.com/for_nischaymalhan/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon2">
+                        <p class="for_nischaymalhan"><b>/for_nischaymalhan</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/triggered.lavisha/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon3">
+                        <p class="triggered_lavisha"><b>/triggered.lavisha</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/triggered__shivangi/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon4">
+                        <p class="triggered__shivangi"><b>/triggered__shivangi</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/triggered_kashvee/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon5">
+                        <p class="triggered_kashvee"><b>/triggered_kashvee</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/preschay.love/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon6">
+                        <p class="preschay_love"><b>/preschay.love</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/nexus.abhischay/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon7">
+                        <p class="nexus_abhischay"><b>/nexus.abhischay</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/triggered_samaira07/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon8">
+                        <p class="triggered_samaira07"><b>/triggered_samaira07</b></p>
+                    </a>
+                </div>
+            </button>
+            <button class="cartoons">
+                <p class="cartoon_credits"><b><u>Cartoon Art Credits</u></b></p>
+                <div class="cartoon_credits_list">
+                    <a href="https://www.instagram.com/aadya_deshbhakt/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon9">
+                        <p class="aadya_deshbhakt"><b>/aadya_deshbhakt</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/edits_for_fav03/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon10">
+                        <p class="edits_for_fav03"><b>/edits_for_fav03</b></p>
+                    </a>
+                    <a href="https://www.threads.net/@triggered_kashvee/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Threads Logo.png" class="insta_icon11">
+                        <p class="triggered_kashvee2"><b>/triggered_kashvee</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/triggered_samaira07/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon12">
+                        <p class="triggered_samaira2"><b>/triggered_samaira07</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/nischayxblessed/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon13">
+                        <p class="nischayxblessed"><b>/nischayxblessed</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/coffee_center_of_nischay/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon14">
+                        <p class="coffee_center_of_nischay"><b>/Radha (Coffee)</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/triggered_anushkaa/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon15">
+                        <p class="triggered_anushkaa"><b>/triggered_anushkaa</b></p>
+                    </a>
+                </div>
+            </button>
+            <button class="videos">
+                <p class="video_credits"><b><u>Video Content Credits</u></b></p>
+                <div class="video_credits_list">
+                    <a href="https://www.instagram.com/nischay.kenkyo/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon16">
+                        <p class="nischay_kenkyo"><b>/nischay.kenkyo</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/nischay.paradise/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon17">
+                        <p class="nischay_paradise"><b>/nischay.paradise</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/triggered_mub/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon18">
+                        <p class="triggered_mub"><b>/triggered_mub</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/adoring_someone_/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon19">
+                        <p class="adoring_someone"><b>/adoring_someone_</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/triggered.insaan_08/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon20">
+                        <p class="triggered_insaan_08"><b>/triggered.insaan_08</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/triggered_shravya/" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon21">
+                        <p class="triggered_shravya"><b>/triggered_shravya</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/stanning.malhans" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon22">
+                        <p class="stanning_malhans"><b>/stanning.malhans</b></p>
+                    </a>
+                    <a href="https://www.instagram.com/triggeredxsmritii" style="text-decoration: none;" target="_blank">
+                        <img src="Images (Lassan)/Insta Icon.png" class="insta_icon23">
+                        <p class="triggeredxsmritii"><b>/triggeredxsmritii</b></p>
+                    </a>
+                </div>
+            </button>
+            <button class="haggu_mention">
+                <a href="https://www.instagram.com/pyaarahaggu/" style="text-decoration: none;" target="_blank">
+                    <p class="justis_head"><b><u>Special Mention To</u></b></p>
+                    <img src="Images (Lassan)/Haggu PFP.jpg" class="haggu_pfp">
+                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon24">
+                    <p class="pyaarahaggu"><b>/pyaarahaggu</b></p>
                 </a>
-                <a href="https://www.instagram.com/triggered__shivangi/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon4">
-                    <p class="triggered__shivangi"><b>/triggered__shivangi</b></p>
-                </a>
-                <a href="https://www.instagram.com/triggered_kashvee/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon5">
-                    <p class="triggered_kashvee"><b>/triggered_kashvee</b></p>
-                </a>
-                <a href="https://www.instagram.com/preschay.love/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon6">
-                    <p class="preschay_love"><b>/preschay.love</b></p>
-                </a>
-                <a href="https://www.instagram.com/nexus.abhischay/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon7">
-                    <p class="nexus_abhischay"><b>/nexus.abhischay</b></p>
-                </a>
-                <a href="https://www.instagram.com/triggered_samaira07/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon8">
-                    <p class="triggered_samaira07"><b>/triggered_samaira07</b></p>
-                </a>
-            </div>
-        </button>
-        <button class="cartoons">
-            <p class="cartoon_credits"><b><u>Cartoon Art Credits</u></b></p>
-            <div class="cartoon_credits_list">
-                <a href="https://www.instagram.com/aadya_deshbhakt/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon9">
-                    <p class="aadya_deshbhakt"><b>/aadya_deshbhakt</b></p>
-                </a>
-                <a href="https://www.instagram.com/edits_for_fav03/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon10">
-                    <p class="edits_for_fav03"><b>/edits_for_fav03</b></p>
-                </a>
-                <a href="https://www.threads.net/@triggered_kashvee/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Threads Logo.png" class="insta_icon11">
-                    <p class="triggered_kashvee2"><b>/triggered_kashvee</b></p>
-                </a>
-                <a href="https://www.instagram.com/triggered_samaira07/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon12">
-                    <p class="triggered_samaira2"><b>/triggered_samaira07</b></p>
-                </a>
-                <a href="https://www.instagram.com/nischayxblessed/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon13">
-                    <p class="nischayxblessed"><b>/nischayxblessed</b></p>
-                </a>
-                <a href="https://www.instagram.com/coffee_center_of_nischay/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon14">
-                    <p class="coffee_center_of_nischay"><b>/Radha (Coffee)</b></p>
-                </a>
-                <a href="https://www.instagram.com/triggered_anushkaa/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon15">
-                    <p class="triggered_anushkaa"><b>/triggered_anushkaa</b></p>
-                </a>
-            </div>
-        </button>
-        <button class="videos">
-            <p class="video_credits"><b><u>Video Content Credits</u></b></p>
-            <div class="video_credits_list">
-                <a href="https://www.instagram.com/nischay.kenkyo/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon16">
-                    <p class="nischay_kenkyo"><b>/nischay.kenkyo</b></p>
-                </a>
-                <a href="https://www.instagram.com/nischay.paradise/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon17">
-                    <p class="nischay_paradise"><b>/nischay.paradise</b></p>
-                </a>
-                <a href="https://www.instagram.com/triggered_mub/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon18">
-                    <p class="triggered_mub"><b>/triggered_mub</b></p>
-                </a>
-                <a href="https://www.instagram.com/adoring_someone_/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon19">
-                    <p class="adoring_someone"><b>/adoring_someone_</b></p>
-                </a>
-                <a href="https://www.instagram.com/triggered.insaan_08/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon20">
-                    <p class="triggered_insaan_08"><b>/triggered.insaan_08</b></p>
-                </a>
-                <a href="https://www.instagram.com/triggered_shravya/" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon21">
-                    <p class="triggered_shravya"><b>/triggered_shravya</b></p>
-                </a>
-                <a href="https://www.instagram.com/stanning.malhans" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon22">
-                    <p class="stanning_malhans"><b>/stanning.malhans</b></p>
-                </a>
-                <a href="https://www.instagram.com/triggeredxsmritii" style="text-decoration: none;" target="_blank">
-                    <img src="Images (Lassan)/Insta Icon.png" class="insta_icon23">
-                    <p class="triggeredxsmritii"><b>/triggeredxsmritii</b></p>
-                </a>
-            </div>
-        </button>
-        <button class="haggu_mention">
-            <a href="https://www.instagram.com/pyaarahaggu/" style="text-decoration: none;" target="_blank">
-                <p class="justis_head"><b><u>Special Mention To</u></b></p>
-                <img src="Images (Lassan)/Haggu PFP.jpg" class="haggu_pfp">
-                <img src="Images (Lassan)/Insta Icon.png" class="insta_icon24">
-                <p class="pyaarahaggu"><b>/pyaarahaggu</b></p>
-            </a>
-        </button>
+            </button>
+        </div>
     </div>
 </body>
 </html>
