--- a/links.html
+++ b/links.html
@@ -20,12 +20,22 @@
     </div>
     <div class="credits_section">
         <button class="thank_you">
-            <p class = "request"> That's all for the website, we wanted to make you happy this Lassan Diwas & hope that we did it right! It would mean a lot to us if you acknowledge
-                every person who contributed to this website by shouting them out and spend some time talking to us on discord, thank you!
+            <p class = "request"> That's all for the website, we wanted to make you happy this Lassan Diwas & hope that we did it
+                right! It would mean a lot to us if you acknowledge every person who contributed to this website, <br> aur bhaiya
+                please discord pe aake thodi der hamaare saath gappe maarlo na please, hamaare saath <br> bhi among us khel lo, ham
+                sab khush ho jaaenge, apne pyaare pyaare 5 year old Lassano ki baat nhi <p class="sll">maanoge kya?</p>
+                <img src="Images (Lassan)/emoji.png" class="emoji"><p class="last_line">‎ ‎ ‎ ‎ ‎
+                    ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ 
+                    ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎
+                    Aur iss baar group chat nahi hai, server hai, and it's highly organised toh we promise ki koi gadbad nahi hogi,
+                    aur aapko bohot saari pings nahi aaengi! So pleaseee join, we will <br> have a lot of fun, we dotaaa youuu always
+                    & forever <3333
+                </p>
             </p>
         </button>
+        <button class="dands">Our Discord Server & Insta Pages Where The Series Is Available!</button>
         <button class="harmony_server">
-            <a href="https://discord.com/invite/NZffnGqHW9" target="_blank"><img src="Images (Lassan)/Discord Logo.png" class="harmony_logo"></a>
+            <a href="https://discord.gg/Zn5g7TYR" target="_blank"><img src="Images (Lassan)/Discord Logo.png" class="harmony_logo"></a>
         </button>
         <button class="series_editors">
             <p class="series_editors_credits"><b><u>Series Editors</u></b></p>
