--- a/links.html
+++ b/links.html
@@ -35,7 +35,7 @@
         </button>
         <button class="dands">Our Discord Server & Insta Pages Where The Series Is Available!</button>
         <button class="harmony_server">
-            <a href="https://discord.gg/Zn5g7TYR" target="_blank"><img src="Images (Lassan)/Discord Logo.png" class="harmony_logo"></a>
+            <a href="https://discord.com/invite/NZffnGqHW9" target="_blank"><img src="Images (Lassan)/Discord Logo.png" class="harmony_logo"></a>
         </button>
         <button class="series_editors">
             <p class="series_editors_credits"><b><u>Series Editors</u></b></p>
