--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Happy Lassan Diwas </title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/favicon.ico?v=2" type="image/x-icon">
+    <link rel="icon" href="/happy-lassan-diwas/favicon.ico" type="image/x-icon">
 </head>
 <body class="page">
     <div class="header">
