--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="container">
         <button class="Lassan_Day_Wish">
             <div class="wish_text">
-                <p>Soo, if you're on this website, it means that it's finally 17th July 2024, the day we Lassans had been</p>
-                <p>waiting for! Today is the 11th Lassan Diwas (1st one in 2014)! 10 years ago today, Yes Yes Bhai made a</p>
+                <p>Soo, if you're on this website, it means that it's finally 17th July 2025, the day we Lassans had been</p>
+                <p>waiting for! Today is the 12th Lassan Diwas (1st one in 2014)! 11 years ago today, Yes Yes Bhai made a</p>
                 <p>decision to start a YouTube channel, and back then he didn't even know how far that decision would</p>
                 <p>take him! His hard work, efforts and consistency bore fruit, and today he has crores of supporters</p>
                 <p>whom he chose to call Lassans! We are so happy Nischay bhaiya, we wish you an ecstatic Lassan Diwas!</p>
@@ -48,7 +48,7 @@
                    <p>I came up with this idea of making a website for Lassan Diwas to shower our love upon you! I asked some</p>
                    <p>Lassans what they thought about my idea and if they wanted to help, they readily agreed! So today we are</p>
                    <p>presenting to you a website for you with content like fan art, memes & edits for you! We tried in every way</p>
-                   <p>to keep things wholsome and have been working on this from 31st March, we hope that you enjoy this gift <3</p>
+                   <p>to keep things wholesome and have been working on this from 31st March, we hope that you enjoy this gift <3</p>
                 </div>
                 <button class="Lassans_Love_You">
                     <div class="love_text">
